@@ -1,4 +1,4 @@
 [
-    "https://betaradio.googlecode.com/git/utils/hichannel.json",
-    "https://betaradio.googlecode.com/git/utils/academic.json"
+    "https://raw.githubusercontent.com/fourdollars/betaradio/master/utils/hichannel.json",
+    "https://raw.githubusercontent.com/fourdollars/betaradio/master/utils/academic.json"
 ]
