@@ -1,3 +1,8 @@
+2014-10-24  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/betaradio.vala,
+	utils/list.json: Fetch the playlist from GtiHub.
+
 2014-08-18  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* debian/compat,
